--- a/css/agora-subeTuEvento.css
+++ b/css/agora-subeTuEvento.css
@@ -36,6 +36,15 @@ body {
 		background-color: var(--marfil);
 	}
 
+.formas_mediosDeComunicacion {
+	
+}
+
+/*///////// SUBE /////////*/
+.sube {
+	background-color: var(--blanco);
+}
+
 .nombre__seccion {
 	font-weight: 300;
 	margin: 0 0 .5rem 0;
@@ -57,11 +66,6 @@ body {
 	font-weight: 300;
 	margin: 0 0 1rem 0;
 	font-size: 90%;
-}
-
-/*///////// SUBE /////////*/
-.sube {
-	background-color: var(--blanco);
 }
 
 /*///////// TIEMPOS /////////*/
