Modal--se modificaron las secciones y se agrego el icon para cada forma | LandingPage--se agregaron los mounstros como maqueta para cada integrante

--- a/agora_landing.jade
+++ b/agora_landing.jade
@@ -203,7 +203,7 @@ body
 			
 			div.jose.equipo__perfil
 				div.equipo__marcoImagen
-					img.equipo__imagen(src="images/perfil_integrante.svg")
+					div.equipo__imagen.perfil--jose
 				h3.nombre__integrante
 					span.weight400 Socio 
 					span.weight100 Desarrollador
@@ -215,7 +215,7 @@ body
 
 			div.ingrid.equipo__perfil
 				div.equipo__marcoImagen
-					img.equipo__imagen(src="images/perfil_integrante.svg")
+					div.equipo__imagen.perfil--ingrid
 				h3.nombre__integrante 
 							span.weight400 Ingrid 
 							span.weight100 Rguez
@@ -228,7 +228,7 @@ body
 
 			div.kalollero.equipo__perfil
 				div.equipo__marcoImagen
-					img.equipo__imagen(src="images/perfil_integrante.svg")
+					div.equipo__imagen.perfil--kalollero
 				h3.nombre__integrante 
 							span.weight400 Kalóllero 
 							span.weight100 Marro.on
