SubeTuEvento & LandingPage--se agrego al imagen maqueta

--- a/agora_landing.jade
+++ b/agora_landing.jade
@@ -85,6 +85,7 @@ body
 	//SECCIÓN INICIO 
 	section#inicio.inicio.flexBox__Row
 		div.inicio__imagen.moduloIzq
+			img.imagen-fluida(src="images/maqueta_de_dibujo.svg")
 		div.inicio__informacion.moduloDer
 			h1.inicio--titulo Descubre.
 			h1.inicio--titulo 	
@@ -126,17 +127,19 @@ body
 	section#alfa.alfa.flexRow
 		div
 			h4 Fase Alfa +
-
+		
 	//SECCIÓN DESCUBRE
 	section#descubre.descubre.flexBox__Row
 		div.descubre__info.moduloIzq
 			h2.nombre__seccion Descubre
 			p.informacion__seccion ágora te muestra las actividades culturales y de entretenimiento a realizarse, dejando atrás la forma aburrida de buscar entre carteleras con eventos atrasados.
 		div.descubre__imagen.moduloDer
+			img.imagen-fluida(src="images/descubre.png")
 
 	//SECCIÓN EXPLORA
 	section#explora.explora.flexBox__Row
 		div.explora__imagen.moduloIzq
+			img.imagen-fluida(src="images/maqueta_de_dibujo.svg")
 		div.explora__info.moduloDer
 			h2.nombre__seccion 
 				| Explora
@@ -161,10 +164,12 @@ body
 			h2.nombre__seccion Comunica
 			p.informacion__seccion Diseñamos el espacio estupendo para tú evento, enfocando ágora para ofrecerte una plataforma especializada en difundir tu evento, en la cual podrás conectar con tus próximos asistentes.
 		div.comunica__imagen.moduloDer
+			img.imagen-fluida(src="images/maqueta_de_dibujo.svg")
 
 	//SECCIÓN CREA
 	section#crea.crea.flexBox__Row
 		div.crea__imagen.moduloIzq
+			img.imagen-fluida(src="images/maqueta_de_dibujo.svg")
 		div.crea__info.moduloDer
 			h2.nombre__seccion 
 				| Crea
@@ -181,11 +186,13 @@ body
 					strong  boletos
 				p.informacion__seccion Dirige a tus usuarios hacia la plataforma que utilizas, y en donde ellos podran adquirir los accesos de tu evento.
 
-				p.informacion__seccion Al crear el espacio de tu evento, ágora te permite ingresar el link que te proproporciona tu servicio de boletaje, o la dirección del sitio web donde pueden encontrarlos.
+				p.informacion__seccion Al crear el espacio de tu evento, ágora te permite ingresar el link que te proporporciona tu servicio de boletaje, o la dirección del sitio web donde pueden encontrarlos.
 			div.moduloDer
+				img.imagen-fluida(src="images/maqueta_de_dibujo.svg")
 
 	section#boletos.boletos.flexBox__Row
-			div.moduloIzq 
+			div.moduloIzq
+				img.imagen-fluida(src="images/maqueta_de_dibujo.svg")
 			div.moduloDer
 				p.informacion__seccion La plataforma te permite también indicarle a tus usuarios si  el acceso a tu evento no tiene un precio
 			
@@ -197,13 +204,14 @@ body
 	//SECCIÓN Equipo
 	section#equipo.equipo.flexBox__Column
 		h2
-			span.weight100 ágora 
-			span.weight300 team
+			span.weight100 Equipo 
+			span.weight400  ágora 
 		div.equipo__tarjetas
 			
 			div.jose.equipo__perfil
 				div.equipo__marcoImagen
 					div.equipo__imagen.perfil--jose
+						img.imagen-fluida(src="images/desarrollador.jpg")
 				h3.nombre__integrante
 					span.weight400 Socio 
 					span.weight100 Desarrollador
@@ -216,6 +224,7 @@ body
 			div.ingrid.equipo__perfil
 				div.equipo__marcoImagen
 					div.equipo__imagen.perfil--ingrid
+						img.imagen-fluida(src="images/ingrid.jpg")
 				h3.nombre__integrante 
 							span.weight400 Ingrid 
 							span.weight100 Rguez
@@ -229,6 +238,7 @@ body
 			div.kalollero.equipo__perfil
 				div.equipo__marcoImagen
 					div.equipo__imagen.perfil--kalollero
+						img.imagen-fluida(src="images/kalollero.jpg")
 				h3.nombre__integrante 
 							span.weight400 Kalóllero 
 							span.weight100 Marro.on
