--- a/css/grid.css
+++ b/css/grid.css
@@ -26,37 +26,38 @@
 		display: grid;
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+		text-align: left;
 	}
 
 		.equipo__marcoImagen{
 			grid-column: 1/2;
 			grid-row: 1/5;
-			background: antiquewhite;
+			/*background: antiquewhite;*/
 			display: flex;
 		}
 		
 		.nombre__integrante {
 			grid-column: 2/3;
 			grid-row: 1/2;
-			background: blue;
+			/*background: blue;*/
 		}
 
 		.descripcion__integrante {
 			grid-column: 2/4;
 			grid-row: 2/4;
-			background: red;
+			/*background: red;*/
 		}
 
 		.tags__integrante{
 			grid-column: 2/4;
 			grid-row: 4;
-			background: orange;
+			/*background: orange;*/
 		}
 
 		.redesSociales__integrante{
 			grid-column: 3/4;
 			grid-row: 1/2;
-			background: purple;
+			/*background: purple;*/
 		}
 
 @media (min-width:768px)  {
@@ -90,36 +91,37 @@
 		display: grid;
 		grid-template-columns: auto;
 		grid-template-rows: auto auto auto auto auto auto;
+		text-align: center;
 	}
 
 		.equipo__marcoImagen{
 			grid-column: 1;
 			grid-row: 1;
-			background: antiquewhite;
+			/*background: antiquewhite;*/
 			display: flex;
 		}
 		
 		.nombre__integrante {
 			grid-column: 1;
 			grid-row: 2;
-			background: blue;
+			/*background: blue;*/
 		}
 
 		.descripcion__integrante {
 			grid-column: 1;
 			grid-row: 3;
-			background: red;
+			/*background: red;*/
 		}
 
 		.tags__integrante{
 			grid-column: 1;
 			grid-row: 4;
-			background: orange;
+			/*background: orange;*/
 		}
 
 		.redesSociales__integrante{
 			grid-column: 1;
 			grid-row: 5;
-			background: purple;
+			/*background: purple;*/
 		}
 }
