--- a/subeTuEvento.jade
+++ b/subeTuEvento.jade
@@ -104,25 +104,29 @@ div.contenedor
 			p.informacion__seccion Destaca la información importante de forma detallada
 			p.informacion__seccion Envía todos tus eventos que estén próximos a suceder
 		div.sube__imagen.moduloDer
+			img.imagen-fluida(src="images/maqueta_de_dibujo.svg")
 
 	//SECCIÓN FORMAS
 	section#formas.formas
 		p Diseñamos tres formas para subir tu evento y así puedas elegir la que más te acomoda
 		div.formas__mediosDeComunicacion
 			div.correoWeb.medioDeComunicacion
-				img.imagen-fluida.imagen__medio(src="images/correo.svg")
+				div.imagen__medio
+					img.imagen-fluida(src="images/correo.svg")
 				h5.nombre__medio Correo Web
 				p.descripcion__medio Descripción de el medio para enviar la información de tu o tus eventos
 				button.boton__medio MOSTRAR
 					
 			div.facebook.medioDeComunicacion
-				img.imagen-fluida.imagen__medio(src="images/facebook.svg")
+				div.imagen__medio
+					img.imagen-fluida(src="images/facebook.svg")
 				h5.nombre__medio Facebook
 				p.descripcion__medio Descripción de el medio para enviar la información de tu o tus eventos
 				button.boton__medio MOSTRAR
 
 			div.formulario.medioDeComunicacion
-				img.imagen-fluida.imagen__medio(src="images/formulario.svg")
+				div.imagen__medio
+					img.imagen-fluida(src="images/formulario.svg")
 				h5.nombre__medio Formulario
 				p.descripcion__medio Descripción de el medio para enviar la información de tu o tus eventos
 				button.boton__medio MOSTRAR
@@ -130,6 +134,7 @@ div.contenedor
 	//SECCIÓN TIEMPOS
 	section#tiempos.tiempos.flexBox__Row
 		div.tiempos__imagen.moduloIzq
+			img.imagen-fluida(src="images/maqueta_de_dibujo.svg")
 		div.tiempos__info.moduloDer
 			h2.nombre__seccion 
 			p.informacion__seccion Los Eventos se aprueban y muestran en la plataforma en un plazo de 24 horas.
