Menu---inicio de creación

--- a/agora_landing.jade
+++ b/agora_landing.jade
@@ -188,11 +188,11 @@ body
 
 				p.informacion__seccion Al crear el espacio de tu evento, ágora te permite ingresar el link que te proporporciona tu servicio de boletaje, o la dirección del sitio web donde pueden encontrarlos.
 			div.moduloDer
-				img.imagen-fluida(src="images/maqueta_de_dibujo.svg")
+				img.imagen-fluida(src="images/boletos_01.svg")
 
 	section#boletos.boletos.flexBox__Row
 			div.moduloIzq
-				img.imagen-fluida(src="images/maqueta_de_dibujo.svg")
+				img.imagen-fluida(src="images/boletos_02.svg")
 			div.moduloDer
 				p.informacion__seccion La plataforma te permite también indicarle a tus usuarios si  el acceso a tu evento no tiene un precio
 			
