--- a/css/agora-mediaQueries.css
+++ b/css/agora-mediaQueries.css
@@ -70,8 +70,8 @@
 
 	.formas__mediosDeComunicacion{
 		display: grid;
-		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 1fr 1fr;
+		grid-template-columns: auto auto;
+		grid-template-rows: auto auto auto;
 	}
 
 	.correoWeb{
@@ -91,32 +91,35 @@
 	
 	.medioDeComunicacion{
 		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
-		grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+		grid-template-columns: auto auto auto auto;
+		grid-template-rows: auto auto auto auto;
 	}
 
 		.imagen__medio{
 			grid-column: 1/2;
-			grid-row: 1/5;
+			grid-row: 1/4;
 			/*background: antiquewhite;*/
 			display: flex;
+			flex-flow: column;
+			justify-content: center;
+			align-items: center;
 		}
 		
 		.nombre__medio {
-			grid-column: 2/3;
+			grid-column: 2/4;
 			grid-row: 1/2;
 			/*background: blue;*/
 		}
 
 		.descripcion__medio{
 			grid-column: 2/4;
-			grid-row: 2/4;
+			grid-row: 2/3;
 			/*background: red;*/
 		}
 
 		.boton__medio{
 			grid-column: 2/4;
-			grid-row: 4;
+			grid-row: 3/4;
 			/*background: orange;*/
 		}
 
@@ -405,55 +408,55 @@
 	
 	.formas__mediosDeComunicacion{
 		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
-		grid-template-rows: 1fr;
+		grid-template-columns: auto auto auto auto;
+		grid-template-rows: auto auto;
 	}
 
 
 	.correoWeb{
-		grid-row: 1;
-		grid-column: 1;
+		grid-row: 1/2;
+		grid-column: 1/2;
 	}
 
 
 	.facebook{
-		grid-row: 1;
-		grid-column: 2;
+		grid-row: 1/2;
+		grid-column: 2/3;
 	}
 
 	.formulario{
-		grid-row: 1;
-		grid-column: 3;
+		grid-row: 1/2;
+		grid-column: 3/4;
 	}
 
 	.medioDeComunicacion{
 		display: grid;
-		grid-template-columns: auto;
-		grid-template-rows: auto auto auto auto auto auto;
+		grid-template-columns: auto auto;
+		grid-template-rows: auto auto auto auto auto;
 	}
 
 		.imagen__medio{
-			grid-column: 1;
-			grid-row: 1;
+			grid-column: 1/2;
+			grid-row: 1/2;
 			/*background: antiquewhite;*/
 			display: flex;
 		}
 		
 		.nombre__medio {
-			grid-column: 1;
-			grid-row: 2;
+			grid-column: 1/2;
+			grid-row: 2/3;
 			/*background: blue;*/
 		}
 
 		.descripcion__medio {
-			grid-column: 1;
-			grid-row: 3;
+			grid-column: 1/2;
+			grid-row: 3/4;
 			/*background: red;*/
 		}
 
 		.boton__medio{
-			grid-column: 1;
-			grid-row: 4;
+			grid-column: 1/2;
+			grid-row: 4/5;
 			/*background: orange;*/
 		}
 
@@ -475,9 +478,9 @@
 		width: calc(100% - 3rem);
 	}
 	
-	/*.descubre, .explora, .comunica, .crea, .boletos {
+	.descubre, .explora, .comunica, .crea, .boletos {
 		height: 80vh;
-	}*/
+	}
 	
 	/*Inicio*/
 		.inicio {
